--- a/src/components/carousel/Carousel.css
+++ b/src/components/carousel/Carousel.css
@@ -3,8 +3,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 600px;
-  height: 400px;
+  width: 100%;
+  height: 70%;
+  top: -15%;
 }
 
 .slide {
@@ -12,6 +13,7 @@
   box-shadow: 0px 0px 7px #666;
   width: 100%;
   height: 100%;
+  object-fit: cover;
 }
 
 .slide-hidden {
