--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,42 +1,37 @@
 .about-me-left {
-    background-color: #f2f2f2;
-    padding: 20px;
-    /* border-radius: 5px; */
-    width: 50%;
-    position: relative;
-    float: left;
-  }
+  background-color: #f2f2f2;
+  padding: 20px;
+  position: relative;
+  float: left;
+}
 
-  .about-me-right {
-    background-color: #f2f2f2;
-    padding: 20px;
-    /* border-radius: 5px; */
-    width: 50%;
-    position: relative;
-    float: left;
-    height: 27.5rem;
+.about-me-right {
+  background-color: #f2f2f2;
+  padding: 20px;
+  position: relative;
+  float: left;
+}
 
-  }
-  
-  h2 {
-    color: #333;
-  }
-  
-  p {
-    color: #666;
-    margin-bottom: 10px;
-  }
-  .main-image {
-    /* width: 100%;
-    height: 25rem;
-    z-index: 0;
-    overflow: hidden; */
-    height: 25rem;
-  }
-  
-  .main-image img {
-    /* width: 110%; */
-    height: 100%;
-    /* object-fit: cover; */
-    /* transform: rotateZ(-5deg) translateY(-4rem) translateX(-1rem); */
-  }
+h1 {
+  font-weight: bold !important;
+}
+
+p {
+  color: #666;
+  margin-bottom: 10px;
+}
+.main-image {
+  height: 50vh;
+  width: 100%;
+}
+
+.main-image img {
+  /* width: 110%; */
+  height: 100%;
+  /* object-fit: cover; */
+  /* transform: rotateZ(-5deg) translateY(-4rem) translateX(-1rem); */
+}
+
+.font-size {
+  font-size: 1em;
+}
