--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -8,7 +8,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-left: 1%;
+  padding: 24px 16px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
   z-index: 10;
+}
+.header div { 
+  width: fit-content;
 }
