Added react-table and customized folder structure

--- a/src/components/reports/report.css
+++ b/src/components/reports/report.css
@@ -85,6 +85,10 @@
   margin-bottom: 10px;
 }
 
+.content-container p {
+  color: var(--bs-body-color);
+}
+
 .report-name-p {
   font-size: 1.5em;
 }
