--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,18 +1,22 @@
-.footer-container {
-    background-color: #333;
-    color: #fff;
-    padding: 20px;
-  }
-  
-  .contact-details {
-    margin-top: 20px;
-  }
-  
-  h3 {
-    font-size: 1.2em;
-  }
-  
-  p {
-    margin: 5px 0;
-  }
-  
+.cms-footer-container {
+  background-color: #1a1a1a;
+  color: #fff;
+  padding: 10px 20px;
+}
+
+.cms-footer-container-contact-details {
+  font-size: 12px;
+}
+
+.cms-footer-container-contact-details-title {
+  font-size: 18px;
+}
+
+.cms-footer-container-contact-details-main {
+  font-size: 12px;
+  margin-top: 10px;
+}
+
+.cms-footer-container-contact-details p {
+  margin: 0;
+}
