--- a/src/components/Card/styles.css
+++ b/src/components/Card/styles.css
@@ -3,7 +3,7 @@
 }
 
 .cms-card {
-  width: 320px;
+  width: 25%;
   height: 350px;
   border-radius: 5px;
   padding: 10px;
@@ -18,4 +18,10 @@
 .cms-card-content {
   font-size: 14px;
   justify-content: center;
+}
+
+.cms-card-container-more-details {
+  display: block;
+  text-align: end;
+  margin: 8px auto;
 }
